deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-html-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-html
  template:
    metadata:
      labels:
        app: static-html
    spec:
      containers:
      - name: nginx
        image: jbeees/dso:v1
        ports:
        - containerPort: 80
