pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod2
spec:
  containers:
  - name: my-container
    image: nginx
    ports:
    - containerPort: 80
