service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-html-service
spec:
  selector:
    app: static-html
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
