ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-html-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: static.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-html-service
            port:
              number: 80
